feat: implement preloader, new fade and zoom animations, and refine existing UI styles.

--- a/fasilitas.html
+++ b/fasilitas.html
@@ -23,13 +23,18 @@
 
 <body class="font-['Poppins'] bg-white text-gray-800">
 
+    <!-- Loading Screen -->
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+
     <!-- Navbar -->
     <div id="navbar-placeholder"></div>
 
     <!-- Page Header / Hero Section -->
     <section class="pt-32 pb-16 sm:pb-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center">
+            <div class="text-center animate-fade-in">
                 <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold text-gray-800 mb-4">
                     Fasilitas Kami
                 </h2>
@@ -47,7 +52,7 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-8">
                 <!-- Facility 1: Kandang Sapi -->
                 <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
+                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
                     <div class="flex justify-center mb-6">
                         <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -66,7 +71,7 @@
 
                 <!-- Facility 2: Mesin Perah -->
                 <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
+                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="flex justify-center mb-6">
                         <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -86,7 +91,7 @@
 
                 <!-- Facility 3: Chopper Gabah -->
                 <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
+                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="flex justify-center mb-6">
                         <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -104,7 +109,7 @@
 
                 <!-- Facility 4: Traktor -->
                 <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
+                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
                     <div class="flex justify-center mb-6">
                         <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -123,7 +128,7 @@
 
                 <!-- Facility 5: Peralatan Pemotongan Sapi -->
                 <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
+                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
                     <div class="flex justify-center mb-6">
                         <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -142,7 +147,7 @@
 
                 <!-- Facility 6: Fasilitas Pembelajaran -->
                 <div
-                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2">
+                    class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
                     <div class="flex justify-center mb-6">
                         <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
                             <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
