--- a/galeri.html
+++ b/galeri.html
@@ -23,13 +23,18 @@
 
 <body class="font-['Poppins'] bg-white text-gray-800">
 
+    <!-- Loading Screen -->
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+
     <!-- Navbar -->
     <div id="navbar-placeholder"></div>
 
     <!-- Page Header / Hero Section -->
     <section class="pt-32 pb-16 sm:pb-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center">
+            <div class="text-center animate-fade-in">
                 <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold text-gray-800 mb-4">
                     Galeri Kami
                 </h2>
@@ -47,41 +52,41 @@
             <div class="grid sm:grid-cols-2 lg:grid-cols-2 gap-6">
                 <!-- Gallery Item 1 -->
                 <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in">
                     <img src="assets/images/gallery-1.jpg" alt="Peralatan Peternakan"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 2 -->
                 <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.1s;">
                     <img src="assets/images/gallery-2.jpg" alt="Sapi Perah" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 3 -->
                 <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.2s;">
                     <img src="assets/images/gallery-3.jpg" alt="Proses Pemerahan"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 4 -->
                 <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.3s;">
                     <img src="assets/images/gallery-4.jpg" alt="Pemberian Pakan"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 5 -->
                 <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.4s;">
                     <img src="assets/images/gallery-5.jpg" alt="Fasilitas Kandang"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 6 -->
                 <div
-                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105">
+                    class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.5s;">
                     <img src="assets/images/gallery-6.jpg" alt="Perawatan Sapi"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
