--- a/tentang.html
+++ b/tentang.html
@@ -23,13 +23,18 @@
 
 <body class="font-['Poppins'] bg-white text-gray-800">
 
+    <!-- Loading Screen -->
+    <div id="loader">
+        <div class="spinner"></div>
+    </div>
+
     <!-- Navbar -->
     <div id="navbar-placeholder"></div>
 
     <!-- Page Header / Hero Section -->
     <section class="pt-32 pb-16 sm:pb-20 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="text-center">
+            <div class="text-center animate-fade-in">
                 <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold text-gray-800 mb-4">
                     Tentang Kami
                 </h2>
@@ -46,7 +51,7 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="grid lg:grid-cols-2 gap-12 items-start">
                 <!-- Left Column - Text Content -->
-                <div class="space-y-8">
+                <div class="space-y-8 scroll-animate fade-right">
                     <div>
                         <h3 class="text-2xl sm:text-3xl font-bold text-gray-800 mb-6">
                             Tentang Peternakan Sapi Perah<br>dan Sapi Potong
@@ -90,9 +95,9 @@
                 </div>
 
                 <!-- Right Column - Image -->
-                <div class="order-first lg:order-last">
+                <div class="order-first lg:order-last scroll-animate fade-left">
                     <img src="assets/images/cow-image.jpg" alt="Sapi Perah Berkualitas"
-                        class="rounded-lg shadow-xl w-full h-auto">
+                        class="rounded-lg shadow-xl w-full h-auto hover:scale-105 transition-transform duration-500">
                 </div>
             </div>
         </div>
