feat: Add new media assets and update image paths in `index.html`, `galeri.html`, and `tentang.html`.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- Hero Section -->
     <section id="beranda" class="relative h-screen flex items-center justify-center text-white"
-        style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/hero-bg.jpg') center/cover no-repeat;">
+        style="background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('assets/images/upload-wa/hero.jpg') center/cover no-repeat;">
         <div class="text-center px-4 animate-fade-in">
             <h2 class="text-4xl sm:text-5xl md:text-6xl font-bold mb-4 leading-tight animate-fade-in">
                 Peternakan Sapi Perah<br>& Potong Polije
@@ -64,7 +64,7 @@
 
             <div class="grid md:grid-cols-2 gap-8 items-center">
                 <div class="order-2 md:order-1 scroll-animate fade-right">
-                    <img src="assets/images/welcome-image.jpg" alt="Fasilitas Peternakan"
+                    <img src="assets/images/upload-wa/beranda-1.jpg" alt="Fasilitas Peternakan"
                         class="rounded-lg shadow-xl w-full h-auto hover:scale-105 transition-transform duration-500">
                 </div>
                 <div class="order-1 md:order-2 space-y-6 scroll-animate fade-left">
