--- a/tentang.html
+++ b/tentang.html
@@ -96,7 +96,7 @@
 
                 <!-- Right Column - Image -->
                 <div class="order-first lg:order-last scroll-animate fade-left">
-                    <img src="assets/images/cow-image.jpg" alt="Sapi Perah Berkualitas"
+                    <img src="assets/images/upload-wa/beranda-1.jpg" alt="Sapi Perah Berkualitas"
                         class="rounded-lg shadow-xl w-full h-auto hover:scale-105 transition-transform duration-500">
                 </div>
             </div>
