--- a/galeri.html
+++ b/galeri.html
@@ -53,41 +53,41 @@
                 <!-- Gallery Item 1 -->
                 <div
                     class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in">
-                    <img src="assets/images/gallery-1.jpg" alt="Peralatan Peternakan"
+                    <img src="assets/images/upload-wa/galeri-1.jpg" alt="Peralatan Peternakan"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 2 -->
                 <div
                     class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.1s;">
-                    <img src="assets/images/gallery-2.jpg" alt="Sapi Perah" class="w-full h-64 sm:h-80 object-cover">
+                    <img src="assets/images/upload-wa/galeri-2.jpg" alt="Sapi Perah" class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 3 -->
                 <div
                     class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.2s;">
-                    <img src="assets/images/gallery-3.jpg" alt="Proses Pemerahan"
+                    <img src="assets/images/upload-wa/galeri-3.jpg" alt="Proses Pemerahan"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 4 -->
                 <div
                     class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.3s;">
-                    <img src="assets/images/gallery-4.jpg" alt="Pemberian Pakan"
+                    <img src="assets/images/upload-wa/galeri-4.jpg" alt="Pemberian Pakan"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 5 -->
                 <div
                     class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.4s;">
-                    <img src="assets/images/gallery-5.jpg" alt="Fasilitas Kandang"
+                    <img src="assets/images/upload-wa/galeri-5.jpg" alt="Fasilitas Kandang"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
 
                 <!-- Gallery Item 6 -->
                 <div
                     class="gallery-item overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition-all duration-300 transform hover:scale-105 scroll-animate zoom-in" style="transition-delay: 0.5s;">
-                    <img src="assets/images/gallery-6.jpg" alt="Perawatan Sapi"
+                    <img src="assets/images/upload-wa/galeri-6.jpg" alt="Perawatan Sapi"
                         class="w-full h-64 sm:h-80 object-cover">
                 </div>
             </div>
