feat: Replace facility card SVG icons with dedicated image assets and update facility descriptions.

--- a/fasilitas.html
+++ b/fasilitas.html
@@ -53,14 +53,8 @@
                 <!-- Facility 1: Kandang Sapi -->
                 <div
                     class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
-                    <div class="flex justify-center mb-6">
-                        <div class="w-16 h-16 bg-green-100 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-8 -mt-8 mb-6">
+                        <img src="assets/images/upload-wa/kandang.jpg" alt="Kandang Sapi" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Kandang Sapi</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
@@ -72,16 +66,8 @@
                 <!-- Facility 2: Mesin Perah -->
                 <div
                     class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
-                    <div class="flex justify-center mb-6">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z">
-                                </path>
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
-                            </svg>
-                        </div>
+                    <div class="-mx-8 -mt-8 mb-6">
+                        <img src="assets/images/upload-wa/perah.jpg" alt="Mesin Perah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Mesin Perah</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
@@ -92,14 +78,8 @@
                 <!-- Facility 3: Chopper Gabah -->
                 <div
                     class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
-                    <div class="flex justify-center mb-6">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M14.121 14.121L19 19m-7-7l7-7m-7 7l-2.879 2.879M12 12L9.121 9.121m0 5.758a3 3 0 10-4.243 4.243 3 3 0 004.243-4.243zm0-5.758a3 3 0 10-4.243-4.243 3 3 0 004.243 4.243z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-8 -mt-8 mb-6">
+                        <img src="assets/images/upload-wa/chopper.jpg" alt="Chopper Gabah" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Chopper Gabah</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
@@ -110,14 +90,8 @@
                 <!-- Facility 4: Traktor -->
                 <div
                     class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up">
-                    <div class="flex justify-center mb-6">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M5 8h14M5 8a2 2 0 110-4h14a2 2 0 110 4M5 8v10a2 2 0 002 2h10a2 2 0 002-2V8m-9 4h4">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-8 -mt-8 mb-6">
+                        <img src="assets/images/upload-wa/traktor.jpg" alt="Traktor" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Traktor</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
@@ -129,33 +103,20 @@
                 <!-- Facility 5: Peralatan Pemotongan Sapi -->
                 <div
                     class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.1s;">
-                    <div class="flex justify-center mb-6">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-8 -mt-8 mb-6">
+                        <img src="assets/images/upload-wa/rumput.jpg" alt="Ladang Rumput Pakan" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
-                    <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Peralatan Pemotongan Sapi</h3>
+                    <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Ladang Rumput Pakan</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
-                        Penunjang penting dalam kegiatan pemotongan untuk proses pemotongan yang lebih efisien dan
-                        higienis.
+                        Area yang diperuntukkan untuk pertumbuhan rumput pakan yang akan diberikan kepada sapi.
                     </p>
                 </div>
 
                 <!-- Facility 6: Fasilitas Pembelajaran -->
                 <div
                     class="facility-card bg-white rounded-xl shadow-lg p-8 hover:shadow-2xl transition-all duration-300 transform hover:-translate-y-2 scroll-animate fade-up" style="transition-delay: 0.2s;">
-                    <div class="flex justify-center mb-6">
-                        <div class="w-16 h-16 bg-green-50 rounded-full flex items-center justify-center">
-                            <svg class="w-8 h-8 text-green-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253">
-                                </path>
-                            </svg>
-                        </div>
+                    <div class="-mx-8 -mt-8 mb-6">
+                        <img src="assets/images/upload-wa/kelas.jpg" alt="Fasilitas Pembelajaran" class="w-full h-48 object-cover rounded-t-xl">
                     </div>
                     <h3 class="text-xl font-bold text-gray-800 text-center mb-3">Fasilitas Pembelajaran</h3>
                     <p class="text-gray-600 text-center leading-relaxed">
